src/output/test_error.txt
  File "test.py", line 13
    print(time.time())asdf
                         ^
SyntaxError: invalid syntax
